--- a/css/main.css
+++ b/css/main.css
@@ -14,21 +14,24 @@ body {
 	width: 659px;
 	height: 494px;
 }
-.ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
 	width: 659px;
 	height: 494px;
 }
-.ryu-ready, .ryu-throwing {
+.ryu-ready, .ryu-throwing, .ryu-cool {
 	display: none;
 }
 .ryu-ready {
-	background-image: url('../images/ryu-ready-position.gif');
+	background-image: url("../images/ryu-ready-position.gif");
 }
 .ryu-still {
-	background-image: url('../images/ryu-standing-still.png');
+	background-image: url("../images/ryu-standing-still.png");
 }
 .ryu-throwing {
-	background-image: url('../images/ryu-throwing-hadouken.png');
+	background-image: url("../images/ryu-throwing-hadouken.png");
+}
+.ryu-cool {
+	background-image: url("../images/ryu-cool.gif")
 }
 .hadouken, .ryu-ready, .ryu-still, .ryu-throwing {
 	background-repeat: no-repeat;
